[gd_scene load_steps=3 format=2]

[ext_resource path="res://resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://scripts/main_menu.gd" type="Script" id=2]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
level = "res://scenes/main.tscn"
about_menu = "res://scenes/about_menu.tscn"

[node name="Color" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 64.0
margin_top = 116.0
margin_right = 95.0
margin_bottom = 204.0

[node name="TitleLabel" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 31.0
margin_bottom = 16.0
text = "PONG"
align = 1
valign = 1

[node name="PlayButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 20.0
margin_right = 31.0
margin_bottom = 40.0
text = "Play"

[node name="OptionsButton" type="Button" parent="CenterContainer/VBoxContainer"]
visible = false
margin_top = 46.0
margin_right = 40.0
margin_bottom = 66.0
disabled = true
text = "Options"

[node name="AboutButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 31.0
margin_bottom = 64.0
text = "About"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 31.0
margin_bottom = 88.0
text = "Quit"
[connection signal="pressed" from="CenterContainer/VBoxContainer/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/AboutButton" to="." method="_on_AboutButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
